# structured_skills

./: .pre-commit-config.yaml  README.md  deno.json  heartbeat_daemon.py  pyproject.toml  script_to_skill.py  structured_skills.py
.github/workflows/: ci.yml  publish.yml  static.yml  test.yml
docs/: README.md  _sidebar.md  api.md  cli.md  getting-started.md  index.html  scheduler.md  validation.md
docs/integrations/: smolagents.md
example/ttrpg-engine/: SKILL.md
example/ttrpg-engine/scripts/: engine_cli.py
examples/skills/example-skill/: SKILL.md
examples/skills/example-skill/scripts/: utils.py
examples/smolagents/: smolagents_example.py
scripts/: generate_single_file.py
skills/: README.md
skills/memory/: SKILL.md
skills/memory/scripts/: memory.py
skills/tasks/: SKILL.md
skills/tasks/scripts/: tasks.py
src/structured_skills/: __init__.py  __main__.py  ast_utils.py  builder.py  cli.py  heartbeat_daemon.py  main.py  platformdirs_utils.py  registry.py  scheduler.py  server.py  skill_registry.py  smolagents.py  stdlib.py  tools.py  validator.py
src/structured_skills/cst/: utils.py
src/structured_skills/tasks/: __init__.py  cli.py  models.py  service.py  store.py
tests/: conftest.py  smoke_test.py  test_builder.py  test_cli.py  test_cli_subprocess.py  test_cst_utils.py  test_heartbeat_daemon.py  test_main.py  test_memory_skill.py  test_registry.py  test_scheduler.py  test_skill_registry.py  test_smolagents.py  test_tasks_cli.py  test_tasks_service.py  test_validator.py
tests/fixtures/skills/echo-skill/: SKILL.md
tests/fixtures/skills/echo-skill/scripts/: echo.py
tests/fixtures/skills/math-skill/: SKILL.md
tests/fixtures/skills/math-skill/resources/: README.txt
tests/fixtures/skills/math-skill/scripts/: ambiguous_ops.py  math_ops.py
