[project]
name = "structured_skills"
version = "0.1.0"
description = "Structured Skills for Agents"
readme = "README.md"
authors = []
requires-python = ">=3.14"
dependencies = [
    "fastmcp>=3.0.0",
    "libcst>=1.8.6",
    "strictyaml>=1.7.3",
]

[project.optional-dependencies]
smolagents = ["smolagents>=1.0.0"]

[project.scripts]
structured_skills = "structured_skills:main"

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.2",
    "ty>=0.0.17",
]
smolagents = ["smolagents>=1.0.0"]

[tool.coverage.run]
omit = [
    "*/__init__.py",
    "*/__main__.py",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I001"]
