[project]
name = "structured_skills"
version = "0.1.1"
description = "Structured Skills for Agents"
readme = "README.md"
authors = []
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=3.0.0",
    "libcst>=1.8.6",
    "strictyaml>=1.7.3",
]

[project.optional-dependencies]
smolagents = ["smolagents>=1.0.0"]

[project.scripts]
structured_skills = "structured_skills:main"

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "bump-my-version>=1.2.7",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.2",
    "ty>=0.0.17",
]
smolagents = ["smolagents>=1.0.0"]

[tool.coverage.run]
omit = [
    "*/__init__.py",
    "*/__main__.py",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I001"]

[tool.bumpversion]
current_version = "0.1.1"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
search = "{current_version}"
replace = "{new_version}"
regex = false
ignore_missing_version = false
tag = true
sign_tags = false
tag_name = "v{new_version}"
tag_message = "Bump version: {current_version} → {new_version}"
allow_dirty = false
commit = true
message = "Bump version: {current_version} → {new_version}"
pre_commit_hooks = ["uv sync", "git add uv.lock"]  # The new bit.
commit_args = ""
